@@ -30,16 +30,14 @@ import org.elasticsearch.indices.SystemIndices.SystemIndexAccessLevel;
 import org.elasticsearch.tasks.Task;
 import org.elasticsearch.threadpool.ThreadPool;
 import org.elasticsearch.transport.TransportService;
+import org.elasticsearch.transport.Transports;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 
 public class TransportGetAliasesAction extends TransportMasterNodeReadAction<GetAliasesRequest, GetAliasesResponse> {
     private static final DeprecationLogger deprecationLogger = DeprecationLogger.getLogger(TransportGetAliasesAction.class);
@@ -47,39 +45,65 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
     private final SystemIndices systemIndices;
 
     @Inject
-    public TransportGetAliasesAction(TransportService transportService, ClusterService clusterService,
-                                     ThreadPool threadPool, ActionFilters actionFilters,
-                                     IndexNameExpressionResolver indexNameExpressionResolver, SystemIndices systemIndices) {
-        super(GetAliasesAction.NAME, transportService, clusterService, threadPool, actionFilters, GetAliasesRequest::new,
-            indexNameExpressionResolver, GetAliasesResponse::new, ThreadPool.Names.SAME);
+    public TransportGetAliasesAction(
+        TransportService transportService,
+        ClusterService clusterService,
+        ThreadPool threadPool,
+        ActionFilters actionFilters,
+        IndexNameExpressionResolver indexNameExpressionResolver,
+        SystemIndices systemIndices
+    ) {
+        super(
+            GetAliasesAction.NAME,
+            transportService,
+            clusterService,
+            threadPool,
+            actionFilters,
+            GetAliasesRequest::new,
+            indexNameExpressionResolver,
+            GetAliasesResponse::new,
+            ThreadPool.Names.MANAGEMENT
+        );
         this.systemIndices = systemIndices;
     }
 
     @Override
     protected ClusterBlockException checkBlock(GetAliasesRequest request, ClusterState state) {
         // Resolve with system index access since we're just checking blocks
-        return state.blocks().indicesBlockedException(ClusterBlockLevel.METADATA_READ,
-            indexNameExpressionResolver.concreteIndexNamesWithSystemIndexAccess(state, request));
+        return state.blocks()
+            .indicesBlockedException(
+                ClusterBlockLevel.METADATA_READ,
+                indexNameExpressionResolver.concreteIndexNamesWithSystemIndexAccess(state, request)
+            );
     }
 
     @Override
     protected void masterOperation(Task task, GetAliasesRequest request, ClusterState state, ActionListener<GetAliasesResponse> listener) {
+        assert Transports.assertNotTransportThread("no need to avoid the context switch and may be expensive if there are many aliases");
         // resolve all concrete indices upfront and warn/error later
         final String[] concreteIndices = indexNameExpressionResolver.concreteIndexNamesWithSystemIndexAccess(state, request);
         final SystemIndexAccessLevel systemIndexAccessLevel = indexNameExpressionResolver.getSystemIndexAccessLevel();
-        ImmutableOpenMap<String, List<AliasMetadata>> aliases = state.metadata().findAliases(request, concreteIndices);
-        listener.onResponse(new GetAliasesResponse(postProcess(request, concreteIndices, aliases, state,
-            systemIndexAccessLevel, threadPool.getThreadContext(), systemIndices),
-            postProcess(indexNameExpressionResolver, request, state)));
+        ImmutableOpenMap<String, List<AliasMetadata>> aliases = state.metadata().findAliases(request.aliases(), concreteIndices);
+        listener.onResponse(
+            new GetAliasesResponse(
+                postProcess(request, concreteIndices, aliases, state, systemIndexAccessLevel, threadPool.getThreadContext(), systemIndices),
+                postProcess(indexNameExpressionResolver, request, state)
+            )
+        );
     }
 
     /**
      * Fills alias result with empty entries for requested indices when no specific aliases were requested.
      */
-    static ImmutableOpenMap<String, List<AliasMetadata>> postProcess(GetAliasesRequest request, String[] concreteIndices,
-                                                                     ImmutableOpenMap<String, List<AliasMetadata>> aliases,
-                                                                     ClusterState state, SystemIndexAccessLevel systemIndexAccessLevel,
-                                                                     ThreadContext threadContext, SystemIndices systemIndices) {
+    static ImmutableOpenMap<String, List<AliasMetadata>> postProcess(
+        GetAliasesRequest request,
+        String[] concreteIndices,
+        ImmutableOpenMap<String, List<AliasMetadata>> aliases,
+        ClusterState state,
+        SystemIndexAccessLevel systemIndexAccessLevel,
+        ThreadContext threadContext,
+        SystemIndices systemIndices
+    ) {
         boolean noAliasesSpecified = request.getOriginalAliases() == null || request.getOriginalAliases().length == 0;
         ImmutableOpenMap.Builder<String, List<AliasMetadata>> mapBuilder = ImmutableOpenMap.builder(aliases);
         for (String index : concreteIndices) {
@@ -104,16 +128,22 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
         return finalResponse;
     }
 
-    static Map<String, List<DataStreamAlias>> postProcess(IndexNameExpressionResolver resolver, GetAliasesRequest request,
-                                                          ClusterState state) {
+    static Map<String, List<DataStreamAlias>> postProcess(
+        IndexNameExpressionResolver resolver,
+        GetAliasesRequest request,
+        ClusterState state
+    ) {
         Map<String, List<DataStreamAlias>> result = new HashMap<>();
         boolean noAliasesSpecified = request.getOriginalAliases() == null || request.getOriginalAliases().length == 0;
         List<String> requestedDataStreams = resolver.dataStreamNames(state, request.indicesOptions(), request.indices());
         for (String requestedDataStream : requestedDataStreams) {
-            List<DataStreamAlias> aliases = state.metadata().dataStreamAliases().values().stream()
+            List<DataStreamAlias> aliases = state.metadata()
+                .dataStreamAliases()
+                .values()
+                .stream()
                 .filter(alias -> alias.getDataStreams().contains(requestedDataStream))
                 .filter(alias -> noAliasesSpecified || Regex.simpleMatch(request.aliases(), alias.getName()))
-                .collect(Collectors.toList());
+                .toList();
             if (aliases.isEmpty() == false) {
                 result.put(requestedDataStream, aliases);
             }
@@ -121,9 +151,14 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
         return result;
     }
 
-    private static void checkSystemIndexAccess(GetAliasesRequest request, SystemIndices systemIndices, ClusterState state,
-                                               ImmutableOpenMap<String, List<AliasMetadata>> aliasesMap,
-                                               SystemIndexAccessLevel systemIndexAccessLevel, ThreadContext threadContext) {
+    private static void checkSystemIndexAccess(
+        GetAliasesRequest request,
+        SystemIndices systemIndices,
+        ClusterState state,
+        ImmutableOpenMap<String, List<AliasMetadata>> aliasesMap,
+        SystemIndexAccessLevel systemIndexAccessLevel,
+        ThreadContext threadContext
+    ) {
         final Predicate<IndexMetadata> systemIndexAccessAllowPredicate;
         if (systemIndexAccessLevel == SystemIndexAccessLevel.NONE) {
             systemIndexAccessAllowPredicate = indexMetadata -> false;
@@ -133,44 +168,31 @@ public class TransportGetAliasesAction extends TransportMasterNodeReadAction<Get
             throw new IllegalArgumentException("Unexpected system index access level: " + systemIndexAccessLevel);
         }
 
+        List<String> netNewSystemIndices = new ArrayList<>();
         List<String> systemIndicesNames = new ArrayList<>();
-        for (Iterator<String> it = aliasesMap.keysIt(); it.hasNext(); ) {
-            String indexName = it.next();
+        aliasesMap.keySet().forEach(indexName -> {
             IndexMetadata index = state.metadata().index(indexName);
             if (index != null && index.isSystem()) {
                 if (systemIndexAccessAllowPredicate.test(index) == false) {
-                    systemIndicesNames.add(indexName);
+                    if (systemIndices.isNetNewSystemIndex(indexName)) {
+                        netNewSystemIndices.add(indexName);
+                    } else {
+                        systemIndicesNames.add(indexName);
+                    }
                 }
             }
-        }
+        });
         if (systemIndicesNames.isEmpty() == false) {
-            deprecationLogger.deprecate(DeprecationCategory.API, "open_system_index_access",
-                "this request accesses system indices: {}, but in a future major version, direct access to system " +
-                    "indices will be prevented by default", systemIndicesNames);
-        } else {
-            checkSystemAliasAccess(request, systemIndices, systemIndexAccessLevel, threadContext);
+            deprecationLogger.warn(
+                DeprecationCategory.API,
+                "open_system_index_access",
+                "this request accesses system indices: {}, but in a future major version, direct access to system "
+                    + "indices will be prevented by default",
+                systemIndicesNames
+            );
         }
-    }
-
-    private static void checkSystemAliasAccess(GetAliasesRequest request, SystemIndices systemIndices,
-                                               SystemIndexAccessLevel systemIndexAccessLevel, ThreadContext threadContext) {
-        final Predicate<String> systemIndexAccessAllowPredicate;
-        if (systemIndexAccessLevel == SystemIndexAccessLevel.NONE) {
-            systemIndexAccessAllowPredicate = name -> true;
-        } else if (systemIndexAccessLevel == SystemIndexAccessLevel.RESTRICTED) {
-            systemIndexAccessAllowPredicate = systemIndices.getProductSystemIndexNamePredicate(threadContext).negate();
-        } else {
-            throw new IllegalArgumentException("Unexpected system index access level: " + systemIndexAccessLevel);
-        }
-
-        final List<String> systemAliases = Arrays.stream(request.aliases())
-            .filter(systemIndices::isSystemName)
-            .filter(systemIndexAccessAllowPredicate)
-            .collect(Collectors.toList());
-        if (systemAliases.isEmpty() == false) {
-            deprecationLogger.deprecate(DeprecationCategory.API, "open_system_alias_access",
-                "this request accesses aliases with names reserved for system indices: {}, but in a future major version, direct" +
-                    "access to system indices and their aliases will not be allowed", systemAliases);
+        if (netNewSystemIndices.isEmpty() == false) {
+            throw SystemIndices.netNewSystemIndexAccessException(threadContext, netNewSystemIndices);
         }
     }
 }
